5339.	[bug]		With some libmaxminddb versions, named could erroneously
			match an IP address not belonging to any subnet defined
			in a given GeoIP2 database to one of the existing
			entries in that database. [GL #1552]

5337.	[func]		'named -V' now reports maxminddb and protobuf-c
			versions. [GL !2686]

	--- 9.11.14 released ---

5330.	[bug]		'configure --without-python' was ineffective if
			PYTHON was set in the environment. [GL #1434]

5329.	[bug]		Reconfiguring named caused memory to be leaked when any
			GeoIP2 database was in use. [GL #1445]

5328.	[bug]		rbtdb.c:rdataset_{get,set}ownercase failed to obtain
			a node lock. [GL #1417]

5327.	[func]		Added a statistics counter to track queries
			dropped because the recursive-clients quota was
			exceeded. [GL #1399]

5326.	[bug]		Add Python dependency on 'distutils.core' to configure.
			'distutils.core' is required for installation.
			[GL #1397]

5322.	[bug]		Conditional compilation of lock_callback was
			inconsistent with conditional use of the function
			when forcing BIND to build with older and unsupported
			versions of OpenSSL. [GL #1386]

5321.	[bug]		Obtain write lock before updating version->records
			and version->bytes. [GL #1341]

	--- 9.11.13 released ---

5315.	[bug]		Apply the inital RRSIG expiration spread fixed
			to all dynamically created records in the zone
			including NSEC3. Also fix the signature clusters
			when the server has been offline for prolonged
			period of times. [GL #1256]

5314.	[func]		Added a new statistics variable "tcp-highwater"
			that reports the maximum number of simultaneous TCP
			clients BIND has handled while running. [GL #1206]

5313.	[bug]		The default GeoIP2 database location did not match
			the ARM.  'named -V' now reports the default
			location. [GL #1301]

5310.	[bug]		TCP failures were affecting EDNS statistics. [GL #1059]

5309.	[bug]		"geoip-use-ecs yes;" was not working for GeoIP2.
			[GL #1275]
